css fix and added the custom scrollbar to the autocomplete

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -923,7 +923,7 @@ textarea:focus, input[type="text"]:focus {
 
 .tt-suggestion.tt-cursor {
   color: #fff;
-  background-color: #75889F;
+  background-color: #EEEEEE;
 }
 
 .tt-cursor > p {
